--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -3,6 +3,7 @@ service:
   targetPort: 3000
 
 envSecrets:
+  SITE_URL: mongodbcom-cdn.website.staging.corp.mongodb.com/developer
   NPM_EMAIL: devcenter-secrets
   NPM_AUTH: devcenter-secrets
   STRAPI_URL: devcenter-secrets
