Cleanup / remove developer path

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - SITE_URL=mongodbcom-cdn.website.staging.corp.mongodb.com/developer
+        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -130,7 +130,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - SITE_URL=mongodb.com/developer
+        - HOST_URL=mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -233,7 +233,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - SITE_URL=mongodbcom-cdn.website.staging.corp.mongodb.com/developer
+        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -302,7 +302,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
-        - SITE_URL=mongodb.com/developer
+        - HOST_URL=mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
