--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -3,7 +3,7 @@ service:
   targetPort: 3000
 
 env:
-  SITE_URL: mongodbcom-cdn.website.staging.corp.mongodb.com/developer
+  HOST_URL: mongodbcom-cdn.website.staging.corp.mongodb.com
 
 envSecrets:
   NPM_EMAIL: devcenter-secrets
