--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.7",
-        "@mdb/flora": "0.20.7-rc.0",
+        "@mdb/flora": "0.21.0",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
         "graphql": "16.2.0",
