--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "html-react-parser": "1.4.11",
         "lodash.debounce": "4.0.8",
         "next": "12.1.0",
+        "next-seo": "^5.4.0",
         "pluralize": "8.0.0",
         "qs": "6.10.3",
         "react": "17.0.2",
