[DEVHUB-1090] DevCenter URL Rewrites to Old Site (#104)
* Add rewrites config and middleware, use internal rewrites

* External rewrites test

* Remove lines from .ignore files

* Update PR check for Vercel deploy

* Temporarily remove these files to make build faster

* Kick off new Vercel deploy-- without env vars

* Update release name

* Push to preview env

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -28,6 +30,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE=${DRONE_COMMIT_SHA}
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}
@@ -123,6 +126,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -132,6 +137,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE=${DRONE_COMMIT_SHA}
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}
@@ -225,6 +231,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_STAGING
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -234,6 +242,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE
       tags:
         - devcenter-staging-build-${DRONE_BUILD_NUMBER}
@@ -293,6 +302,8 @@ steps:
         from_secret: NPM_EMAIL
       STRAPI_URL:
         from_secret: STRAPI_URL_PROD
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
     settings:
       create_repository: true
       enable_cache: true
@@ -302,6 +313,7 @@ steps:
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
+        - DEVHUB_URL
         - APP_RELEASE
       tags:
         - devcenter-prod-build-${DRONE_BUILD_NUMBER}
