--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.7",
-        "@mdb/flora": "0.20.6",
+        "@mdb/flora": "0.21.0",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
         "hex-rgb": "4.3.0",
         "html-react-parser": "1.4.11",
+        "lodash.debounce": "4.0.8",
         "next": "12.1.0",
         "pluralize": "8.0.0",
         "qs": "6.10.3",
@@ -53,6 +54,7 @@
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
         "@testing-library/user-event": "14.0.0-beta.11",
+        "@types/lodash.debounce": "4.0.7",
         "@types/node": "17.0.12",
         "@types/react": "17.0.38",
         "@types/sanitize-html": "^2.6.2",
