[DEVHUB-1127] SEO Updates - Titles (#109)
* Add SITE_URL and allow for access in client code

* Add canonical link tag for all pages

* Add SITE_URL to drone pipeline and environments

* Canonicalize all routes except for _error

* Correction to env vars

* Cleanup / remove developer path

* Update lighthouse config

* Add next-seo library, setup SEO for content interfaces

* devhub-1131 Adding seo to strapi api calls

* devhub-1131 Adding seo to strapi api calls

* devhub-1131 Adding seo to strapi api calls

* Add NextSeo component for most pages

* Add Seo component for L1_L2 Topic page

* Fix typo, remove todo comments for now

* Ignore failing on missing crawlable anchors for images

Co-authored-by: harika.kotipalli <harika.1818@gmail.com>

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
+        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -134,6 +135,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
+        - HOST_URL=mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -239,6 +241,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
+        - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
@@ -310,6 +313,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
+        - HOST_URL=mongodb.com
         - NPM_AUTH
         - NPM_EMAIL
         - STRAPI_URL
