--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -2,6 +2,9 @@ service:
   type: ClusterIP
   targetPort: 3000
 
+env:
+  HOST_URL: mongodb.com
+
 envSecrets:
   NPM_EMAIL: devcenter-secrets
   NPM_AUTH: devcenter-secrets
