--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -115,6 +115,8 @@ jobs:
               run: yarn install --frozen-lockfile
             - name: yarn build
               run: yarn run build
+              env:
+                  HOST_URL: localhost:3000
             - name: Install Lighthouse
               run: yarn global add @lhci/cli@0.8.x
             - name: Run Lighthouse
