--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-player": "2.10.0",
+        "react-truncate": "^2.4.0",
         "remark": "13.0.0",
         "remark-directive": "1.0.1",
         "remark-gfm": "1.0.0",
