--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.21.0",
+        "@types/react-truncate": "^2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
         "graphql": "16.2.0",
