--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@emotion/styled": "11.8.1",
         "@mdb/consistent-nav": "1.2.7",
         "@mdb/flora": "0.21.0",
-        "@types/react-truncate": "^2.3.4",
+        "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
         "graphql": "16.2.0",
@@ -39,7 +39,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-player": "2.10.0",
-        "react-truncate": "^2.4.0",
+        "react-truncate": "2.4.0",
         "remark": "13.0.0",
         "remark-directive": "1.0.1",
         "remark-gfm": "1.0.0",
