--- a/package.json
+++ b/package.json
@@ -69,5 +69,9 @@
         "lint-staged": "11.1.1",
         "prettier": "2.5.1",
         "typescript": "4.5.4"
+    },
+    "resolutions": {
+        "@types/react": "17.0.2",
+        "@types/react-dom": "17.0.2"
     }
 }
