Revert "Hide registry"

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,8 +24,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry:
-        from_secret: ecr_registry
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
@@ -79,14 +78,11 @@ steps:
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-frontend
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=${registry}/devrel/${DRONE_REPO_NAME}
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
       values_files: ["environments/staging.yaml"]
-    environment:
-      registry:
-        from_secret: ecr_registry
 
   - name: set-release-sha
     image: drone/cli:1.4.0-alpine
@@ -136,8 +132,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry:
-        from_secret: ecr_registry
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - HOST_URL=www.mongodb.com
@@ -179,14 +174,11 @@ steps:
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
       release: devcenter-frontend
-      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=${registry}/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.prod.corp.mongodb.com
+      values: image.tag=git-${DRONE_COMMIT_SHA:0:7},image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend.devrel.prod.corp.mongodb.com
       api_server: https://api.prod.corp.mongodb.com
       kubernetes_token:
         from_secret: prod_kubernetes_token
       values_files: ["environments/prod.yaml"]
-    environment:
-      registry:
-        from_secret: ecr_registry
 
   - name: set-release-sha
     image: drone/cli:1.4.0-alpine
@@ -246,8 +238,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry:
-        from_secret: ecr_registry
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - HOST_URL=mongodbcom-cdn.website.staging.corp.mongodb.com
@@ -319,8 +310,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry:
-        from_secret: ecr_registry
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - HOST_URL=www.mongodb.com
@@ -383,8 +373,7 @@ steps:
     settings:
       create_repository: true
       enable_cache: true
-      registry:
-        from_secret: ecr_registry
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
         - HOST_URL=www.mongodb.com
