--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/react-truncate": "2.3.4",
         "apollo-link-rest": "0.9.0-rc.1",
         "axios": "^0.27.2",
+        "feed": "4.2.2",
         "graphql": "16.2.0",
         "graphql-anywhere": "4.2.7",
         "hex-rgb": "4.3.0",
