Set cache and snapshot mode

--- a/.drone.yml
+++ b/.drone.yml
@@ -237,6 +237,8 @@ steps:
         from_secret: DEVHUB_URL
     settings:
       create_repository: true
+      enable_cache: false
+      snapshot_mode: full
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: devrel/${DRONE_REPO_NAME}
       build_args:
@@ -265,7 +267,7 @@ steps:
 
 trigger:
   branch:
-    - main
+    - ah/devhub-1280
   event:
     - custom
 
