--- a/.drone.yml
+++ b/.drone.yml
@@ -77,8 +77,8 @@ steps:
       chart_version: 4.7.3
       add_repos: [mongodb=https://10gen.github.io/helm-charts]
       namespace: devrel
-      release: devcenter-frontend
-      values: image.tag=devcenter-staging-build-${DRONE_BUILD_NUMBER},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
+      release: devcenter-frontend-preview
+      values: image.tag=devcenter-staging-build-${DRONE_BUILD_NUMBER},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME},ingress.enabled=true,ingress.hosts[0]=devcenter-frontend-preview.devrel.staging.corp.mongodb.com
       api_server: https://api.staging.corp.mongodb.com
       kubernetes_token:
         from_secret: staging_kubernetes_token
@@ -223,7 +223,7 @@ steps:
       NPM_EMAIL:
         from_secret: NPM_EMAIL
       STRAPI_URL:
-        from_secret: STRAPI_URL_PROD
+        from_secret: STRAPI_URL_STAGING
       DEVHUB_URL:
         from_secret: DEVHUB_URL
     settings:
@@ -256,8 +256,10 @@ steps:
         from_secret: drone_token
 
 trigger:
+  branch:
+    - ah/fix-tags-preview
   event:
-    - cron
+    - push
 
 ---
 depends_on: null
