--- a/.drone.yml
+++ b/.drone.yml
@@ -201,7 +201,7 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: rebuild-devcenter-staging-cron # Used to rebuild content published by DevRel, using what's currently deployed in the production branch.
+name: rebuild-devcenter-staging-cron # Used to rebuild content published by DevRel, using what's currently deployed in the main branch.
 
 steps:
   - name: publish-staging-from-cron
@@ -254,7 +254,7 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: rebuild-devcenter-prod-cron # Used to rebuild content published by DevRel, using the current SHA.
+name: rebuild-devcenter-prod-cron # Used to rebuild content published by DevRel, using what's currently deployed in the production branch.
 
 steps:
   - name: publish-prod-from-cron
