--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "hex-rgb": "4.3.0",
         "html-react-parser": "1.4.11",
         "lodash.debounce": "4.0.8",
+        "lru-cache": "7.10.1",
         "next": "12.1.0",
         "next-seo": "5.4.0",
         "pluralize": "8.0.0",
