--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "format:write": "prettier --write .",
         "format:check": "prettier --check .",
         "test": "jest --watch",
-        "test:e2e": "cypress open"
+        "test:e2e": "npx playwright install && npx playwright test"
     },
     "husky": {
         "hooks": {
@@ -54,7 +54,7 @@
         "@babel/plugin-transform-react-jsx": "^7.17.3",
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
-        "@testing-library/cypress": "8.0.2",
+        "@playwright/test": "^1.22.2",
         "@testing-library/jest-dom": "5.16.1",
         "@testing-library/react": "12.1.2",
         "@testing-library/user-event": "14.0.0-beta.11",
@@ -62,7 +62,6 @@
         "@types/node": "17.0.12",
         "@types/react": "17.0.38",
         "@types/sanitize-html": "^2.6.2",
-        "cypress": "9.2.1",
         "eslint": "8.6.0",
         "eslint-config-next": "12.0.7",
         "husky": "4.3.8",
