--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -32,7 +32,7 @@ jobs:
               run: yarn format:check
             - name: Lint
               run: yarn lint
-    cypress-tests:
+    playwright-tests:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout target branch
@@ -52,23 +52,13 @@ jobs:
             - name: Install dependencies
               if: steps.cache.outputs.cache-hit != 'true'
               run: yarn install --frozen-lockfile
-            - name: Install Cypress
+            - name: Install Playwright
               if: steps.cache.outputs.cache-hit == 'true'
-              run: ./node_modules/.bin/cypress install
+              run: ./node_modules/.bin/playwright install
             - name: Build
               run: yarn build
-            - name: Run Cypress
-              uses: cypress-io/github-action@v2
-              with:
-                  install: false
-                  start: yarn start
-                  wait-on: 'http://localhost:3000/developer'
-            - name: Generate artifacts on failure
-              uses: actions/upload-artifact@v2
-              if: ${{ failure() }}
-              with:
-                  name: cypress-screenshots
-                  path: cypress/screenshots
+            - name: Run Playwright
+              run: yarn test:e2e
     jest-tests:
         runs-on: ubuntu-latest
         steps:
