Add and upload screenshots for playwright trsts

--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -59,6 +59,12 @@ jobs:
               run: yarn build
             - name: Run Playwright
               run: yarn test:e2e
+            - name: Upload test results
+              if: ${{ failure() }}
+              uses: actions/upload-artifact@v2
+              with:
+                  name: playwright-artifacts
+                  path: playwright-artifacts
     jest-tests:
         runs-on: ubuntu-latest
         steps:
