--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "lru-cache": "7.10.1",
         "next": "12.1.0",
         "next-seo": "5.4.0",
+        "pino": "^8.0.0",
         "pluralize": "8.0.0",
         "qs": "6.10.3",
         "react": "17.0.2",
