--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -15,8 +15,8 @@ envSecrets:
   PREVIEW_SECRET_KEY: devcenter-secrets
 
 autoscaling:
-  minReplicas: 1
-  maxReplicas: 1
+  minReplicas: 2
+  maxReplicas: 4
   metrics:
     - type: Resource
       resource:
@@ -46,4 +46,4 @@ resources:
 ingress:
   enabled: true
   path: /developer
-  hosts: ["devcenter-frontend-ip-limiting.devrel.staging.corp.mongodb.com"]
+  hosts: ["mongodbcom-cdn.website.staging.corp.mongodb.com","devcenter-frontend.devrel.staging.corp.mongodb.com"]
