--- a/.drone.yml
+++ b/.drone.yml
@@ -116,6 +116,104 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
+name: build-devcenter-preview
+
+resources:
+  requests:
+    cpu: 8
+    memory: 4GiB
+
+steps:
+  - name: publish-preview
+    image: plugins/kaniko-ecr
+    environment:
+      NPM_AUTH:
+        from_secret: NPM_AUTH
+      NPM_EMAIL:
+        from_secret: NPM_EMAIL
+      REALM_API_URL:
+        from_secret: REALM_API_URL
+      REALM_SEARCH_URL:
+        from_secret: REALM_SEARCH_URL
+      STRAPI_URL:
+        from_secret: STRAPI_URL_PROD
+      DEVHUB_URL:
+        from_secret: DEVHUB_URL
+    settings:
+      create_repository: true
+      enable_cache: true
+      registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
+      repo: devrel/${DRONE_REPO_NAME}
+      build_args:
+        - HOST_URL=devcenter-frontend-preview.devrel.staging.corp.mongodb.com
+        - NPM_AUTH
+        - NPM_EMAIL
+        - REALM_API_URL
+        - REALM_SEARCH_URL
+        - STRAPI_URL
+        - DEVHUB_URL
+        - APP_RELEASE=${DRONE_COMMIT_SHA}
+      tags:
+        - devcenter-preview-build-${DRONE_BUILD_NUMBER}
+        - latest-preview
+      access_key:
+        from_secret: ecr_access_key
+      secret_key:
+        from_secret: ecr_secret_key
+      values_files: ["environments/preview.yaml"]
+    when:
+      event:
+        - push
+
+  - name: deploy-preview
+    image: drone/cli:1.4.0-alpine
+    commands:
+    - drone build promote mongodb/devcenter ${DRONE_BUILD_NUMBER} preview
+    environment:
+      DRONE_SERVER: ${DRONE_SYSTEM_PROTO}://${DRONE_SYSTEM_HOST}
+      DRONE_TOKEN:
+        from_secret: drone_token
+    when:
+      event:
+      - push
+
+trigger:
+  branch:
+    - headers-to-request-logs
+  event:
+    - push
+
+---
+depends_on: null
+kind: pipeline
+type: kubernetes
+name: deploy-devcenter-preview
+
+steps:
+  - name: deploy-preview
+    image: quay.io/mongodb/drone-helm:v3
+    settings:
+      chart: mongodb/web-app
+      chart_version: 4.7.3
+      add_repos: [mongodb=https://10gen.github.io/helm-charts]
+      namespace: devrel
+      release: devcenter-frontend
+      values: image.tag=devcenter-preview-build-${DRONE_BUILD_PARENT},image.pullPolicy=Always,image.repository=795250896452.dkr.ecr.us-east-1.amazonaws.com/devrel/${DRONE_REPO_NAME}
+      api_server: https://api.staging.corp.mongodb.com
+      kubernetes_token:
+        from_secret: staging_kubernetes_token
+      values_files: ["environments/preview.yaml"]
+
+trigger:
+  event:
+    - promote
+    - rollback
+  target:
+    - preview
+---
+depends_on: null
+kind: pipeline
+type: kubernetes
 name: build-devcenter-prod
 
 resources:
