--- a/environments/staging.yaml
+++ b/environments/staging.yaml
@@ -37,11 +37,11 @@ probes:
 
 resources:
   limits:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 500m
+    memory: 2Gi
   requests:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 500m
+    memory: 2Gi
 
 ingress:
   enabled: true
