--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "hex-rgb": "4.3.0",
         "html-react-parser": "1.4.11",
         "lodash.debounce": "4.0.8",
+        "lru-cache": "7.10.1",
         "next": "12.1.0",
         "next-seo": "5.4.0",
+        "pino": "8.0.0",
         "pluralize": "8.0.0",
         "qs": "6.10.3",
         "react": "17.0.2",
