--- a/environments/prod.yaml
+++ b/environments/prod.yaml
@@ -8,6 +8,8 @@ env:
 envSecrets:
   NPM_EMAIL: devcenter-secrets
   NPM_AUTH: devcenter-secrets
+  REALM_API_URL: devcenter-secrets
+  REALM_SEARCH_URL: devcenter-secrets
   STRAPI_URL: devcenter-secrets
   DEVHUB_URL: devcenter-secrets
   PREVIEW_SECRET_KEY: devcenter-secrets
